package org.example;

public class SandwichDirector {
}
