package org.example;

public class SubteWay {
}
